fixed seekbar thumb being square and offcenter in chromium

--- a/styles/style.css
+++ b/styles/style.css
@@ -79,9 +79,11 @@ a:hover {
     appearance: none;
     width: 18px;
     height: 18px;
+    border-radius: 50%;
     background: cyan;
     cursor: pointer;
     border: none;
+    margin: -6px;
   }
   
 #seekbar::-moz-range-thumb {
